# DWEB-FINAL-PROJECT-DENTAL-APPOINTMENTS

./: README.md  pyproject.toml  render.yaml
app/: create_superuser.py  manage.py
app/appointments/: apps.py
app/config/: settings.py  wsgi.py
app/users/: apps.py
tests/integration/: test_appointments.py
